--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,7 +3,7 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     text-transform: uppercase;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
 }
 
 /* Navbar */
