--- a/css/style.css
+++ b/css/style.css
@@ -553,11 +553,16 @@
         color: black;
     }
 
+    .dentist {
+        background-color: #ADD0F9;
+    }
+
     .dentist-tittle {
         font-size: 36px;
         font-weight: bold;
         text-align: center;
-        margin: 50px 0px 50px 0px;
+        margin: 0px 0px 70px 0px;
+        padding-top: 70px;
     }
 
     /* Styling untuk container dentist */
@@ -657,11 +662,16 @@
         color: black;
     }
 
+    .services {
+        background-color: #ADD0F9;
+    }
+
     .services-tittle {
         font-size: 36px;
         font-weight: bold;
         text-align: center;
-        margin: 100px 0px 75px 0px;
+        margin: 0px 0px 75px 0px;
+        padding-top: 70px;
     }
 
     /* Styling untuk container Services */
@@ -778,6 +788,7 @@
     }
 
     .contact {
+        background-color: #ADD0F9;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -787,15 +798,42 @@
     .contact-left {
         flex: 1;
         padding: 20px;
-        border-radius: 10px;
-        /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
+    }
+
+    .opening-container {
+        margin: 10px 0px 0px 50px;
+    }
+
+    .opening-tittle {
+        background-color: #fff;
+        border: 1px solid #ABB6B9;
+        border-radius: 8px;
+        width: fit-content;
+        padding: 15px 10px;
+        position: relative;
+        z-index: 100;
+        margin: 0 0px -6% 40px;
+        font-weight: bold;
+        font-size: 24px;
+    }
+
+    .opening-list {
+        padding: 40px;
+        border: 1px solid #ABB6B9;
+        background-color: #fff;
+        border-radius: 8px;
+        z-index: 1;
+        width: 400px;
+        height: 260px;
     }
     
     .contact-right {
         flex: 1;
         padding: 20px;
+        margin-right: 50px;
+        margin-left: 100px;
         background: none;
-        border-radius: 10px;
+        
     }
     
     .contact-right h2 {
@@ -838,7 +876,7 @@
         box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
         color: black;
         border: none;
-        padding: 10px 20px;
+        padding: 5px 20px;
         border-radius: 10px;
         font-size: 18px;
         font-weight: 500;
@@ -956,4 +994,133 @@
         border-radius: 10px;
         font-size: 14px;
         cursor: pointer;
+    }
+
+/* FOOTER */
+
+    .footer {
+        color: #2f2f2f;
+        background-color: #fff;
+        border-top: 1px solid #e5e5e5;
+        border-radius: 30px 30px 0 0;
+    }
+
+    .footer_content {
+        padding: 0 30px 20px 40px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .footer__addr {
+        margin-bottom: 30px;
+        color: #999;
+    }
+
+    .footer__logo {
+        cursor: pointer;
+        font-size: 40px;
+        font-weight: 700;
+        background: linear-gradient(112.82deg, #2b74fc 19.93%, #6d9ef8 102.22%);
+        -webkit-background-clip: text;
+        color: transparent;
+    }
+
+    .footer__nav {
+        font-weight: 500;
+        margin-bottom: 30px;
+        margin-top: 60px;
+        margin-left: 200px;
+    }
+
+    .footer__nav ul li a {
+        color: black;
+    }
+
+    .nav__services {
+        margin-top: 65px;
+    }
+
+    .nav__services p {
+        font-weight: 500
+    }
+
+    .nav__services ul {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 5px;
+    }
+
+    .nav__services li {
+        flex-basis: calc(50% - 10px);
+        color: #999;
+    }
+
+    .srvc_tittle {
+        font-weight: 400;
+        font-size: 15px;
+    }
+
+    .footer ul {
+        list-style: none;
+        padding-left: 0;
+    }
+
+    .footer li {
+        line-height: 2em;
+    }
+
+    .footer a {
+        text-decoration: none;
+    }
+
+    .copyright {
+        text-align: center;
+        font-weight: 500;
+        background-color: #ADD0F9;
+        padding-bottom: 2px;
+    }
+
+    .copyright::before {
+        content: "";
+        display: block;
+        height: 1px;
+        background-color: #000;
+        margin-bottom: 10px;
+    }
+
+    /* Tampilan layar berukuran kecil */
+    @media screen and (max-width: 768px) {
+        .footer_content {
+            grid-template-columns: 1fr; /* Mengatur satu kolom pada tampilan layar kecil */
+            padding: 0 20px; /* Mengurangi padding pada tampilan layar kecil */
+        }
+
+        .footer__nav {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-start; /* Mengatur agar elemen berjajar ke samping */
+            margin-left: 0; /* Menghilangkan margin kiri pada tampilan layar kecil */
+        }
+
+        .nav__services {
+            margin-top: 30px; /* Mengurangi margin atas pada tampilan layar kecil */
+        }
+
+        .nav__services ul {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between; /* Mengatur agar elemen 4 dikiri dan 4 di kanan */
+        }
+        
+        .nav__services li {
+            flex-basis: calc(50% - 10px); /* Item mengambil lebar setengah dari kolom dengan jarak antar item */
+            text-align: left; /* Mengatur teks menjadi kiri pada tampilan layar kecil */
+        }
+        
+        .copyright {
+            margin-top: 20px; /* Mengurangi margin atas pada tampilan layar kecil */
+        }
     }
